samples/_failures_safe/1761269637_b3c4da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0f4035c.c: In function ‘main’:
./samples/SAFE/__tmp_a0f4035c.c:145:24: error: missing terminating " character
  145 |                 printf("Added edge: %s -> %s (weight: %
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a0f4035c.c:145:17: error: expected expression at end of input
  145 |                 printf("Added edge: %s -> %s (weight: %
      |                 ^~~~~~
./samples/SAFE/__tmp_a0f4035c.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f4035c.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f4035c.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f4035c.c:145:17: error: expected declaration or statement at end of input
